style: run prettier
Command: contrib/create-style-commit

--- a/contrib/test-webcomponent/test.html
+++ b/contrib/test-webcomponent/test.html
@@ -2,10 +2,16 @@
     <script type="module" src="../../webcomponent.js"></script>
 
     <template id="template">
-        <eaas-environment id="example1" eaas-service="https://eaas.example/emil/"
-            environment-id="8e2e4d21-89f1-4ddd-8dd4-0a55f59d9d9f" autoplay enable-internet
-            style="border: red solid 10px;">
-            <strong>Please wait</strong> while the environment is being started ...
+        <eaas-environment
+            id="example1"
+            eaas-service="https://eaas.example/emil/"
+            environment-id="8e2e4d21-89f1-4ddd-8dd4-0a55f59d9d9f"
+            autoplay
+            enable-internet
+            style="border: red solid 10px"
+        >
+            <strong>Please wait</strong> while the environment is being started
+            ...
         </eaas-environment>
     </template>
 
@@ -14,7 +20,11 @@
         globalThis.template;
         const env = template.content.querySelector("eaas-environment");
 
-        const { eaasService, envId } = Object.fromEntries(new URLSearchParams(location.hash.slice(1) || location.search.slice(1)));
+        const { eaasService, envId } = Object.fromEntries(
+            new URLSearchParams(
+                location.hash.slice(1) || location.search.slice(1),
+            ),
+        );
 
         env.setAttribute("eaas-service", eaasService);
         env.setAttribute("environment-id", envId);
