--- a/xpra/xpra-test.html
+++ b/xpra/xpra-test.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <h1>eaas-xpra test</h1>
 <div id="emulator-container"></div>
 <script type="module" src="xpra-test.js"></script>
